homework/5.kubernetes-network/deployment postgre.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:       
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
#        resources:
#          requests:
#            cpu: 100m
#            memory: 2000Mi
#          limits:
#            cpu: 100m
#            memory: 2000Mi
        volumeMounts:
        - name: pg-data-volume
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pg-data-volume
        persistentVolumeClaim:
          claimName: postgres-data-volume

#get storages
#kubectl get storageclass
