homework/5.kubernetes-network/deployment redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redmine
    spec:
      containers:       
      - image: redmine:5-alpine
        name: redmine
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 1000Mi
          limits:
            cpu: 100m
            memory: 1000Mi

#get storages
#kubectl get storageclass
